# shopfeed-os

./: .gitignore  README.md  architecture_audit.md  audit_diagrams.py  blueprint_vs_codebase_audit.md.resolved  generate_diagrams.py  generate_pro_diagrams.py  gpu_cost_analysis.md  live-streaming-infra-hetzner-V3.md  pyproject.toml  requirements.txt  runpod_guide_training_costs.md  shopping_feed_blueprint.html  t.md
configs/: encoders.yaml  epsilon.yaml  infrastructure.yaml  monitoring.yaml  serving.yaml  spark.yaml  training.yaml
diagrams/: phase1-mvp.drawio  phase2-scale.drawio  phase3-production.drawio  shopfeed-live-infra.drawio
infra/k8s/: manifests.yaml
infra/kafka/: topics.yaml
infra/postgres/: 001_init.sql
infra/redis/: config.yaml
ml/: __init__.py  config_loader.py
ml/ads/: __init__.py  ad_ranker.py  ad_retrieval.py  auction.py  budget_pacing.py  epsilon.py  fatigue.py  targeting.py  uplift.py
ml/analytics/: __init__.py  clickhouse_client.py
ml/audio/: __init__.py  engagement_scorer.py  vggish_encoder.py  wav2vec_features.py  whisper_transcriber.py
ml/cv/: __init__.py  blip2_describer.py  category_verifier.py  clip_encoder.py  duplicate_detector.py  quality_scorer.py  (+1 more)
notebooks/: README.md
scripts/: __init__.py  build_faiss_index.py  evaluate_models.py  export_triton.py  finetune_run.py  prepare_data.py  pretrain.py  seed_geo_zones.py
shared/: __init__.py  currency.py  realtime_counters.py
tests/: test_dien_masking.py  test_loaders.py  test_models.py  test_search_gaps.py  test_streaming_trainer.py  test_train.py
z-file/: feed_engine_architecture_v4.md  live-streaming-infra-hetzner-V4.md  runpod_guide_training_costs.md  shopfeed_ml_architecture_complete.md
(+196 files in other folders)
